# CGPA-stats

./: CMakeLists.txt  README.md  STUDENT_SYSTEM.C  functions.c  header.txt  main.c  student.h  students.txt
